# jepper-task-sort

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
app/config/: logging.py
