[tool.poetry]
name = "onco-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.0"
tomlkit = "~0.12.5"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = ".venv"

[tool.coverage.run]
source = [
    "app/"
]
omit = [
    "__init__.py"
]
